...
        case will = "will"

        var id: Self { self }
    }

    enum VerbOptions: String, CaseIterable, Identifiable {
        case process = "<process verb>"
        case provide = "provide <whom>"
        case able = "be able to"

        var id: Self { self }
    }

...
                        .textInputAutocapitalization(.never)
                        .padding()
                }
            }

            RoundedVStack {
                TextField("<details>", text: $details)
                    .textInputAutocapitalization(.never)
                    .padding()
            }

            Spacer()

...
