...
                            error: error.localizedDescription,
                            action: { viewStore.send(.fetchProjects) }
                        )
                    }
                }
                .frame(maxHeight: .infinity)
                .navigationTitle(Text("Smart Goods"))
                .background(.clear)
                .scrollContentBackground(.hidden)
                .refreshable {
                    viewStore.send(.fetchProjects)
                }
                .overlay {
...
            Image(systemName: "trash.fill")
                .foregroundColor(AppColor.error.color)
                .onTapGesture {
                    viewStore.send(.deleteRequirement(requirement.id))
                }
                .accessibilityElement()
                .accessibilityIdentifier("DeleteRequirementButton")

//            if requirement.isRuppScheme == "true" {
//                Text("OK")
//                    .foregroundColor(AppColor.success.color)
//                    .bold()
//            } else {
...
