...
                    }

                    saveAndCheckButtonBody(viewStore)
                        .padding(.top, 8)
                }
                .background(AppColor.background.color)
                .navigationTitle(Text("Create Requirement"))
                .padding(.vertical, 24)
                .padding(.horizontal, 20)
                .onDisappear {
                    viewStore.send(.resetState)
                }
            }
...
            }) {
                switch viewStore.requirementSaved {
                case .loading:
                    LoadingView()
                case .loaded:
                    HStack {
                        Text("Save")

                        Image(systemName: "checkmark.circle.fill")
                            .renderingMode(.template)
                            .foregroundColor(AppColor.success.color)
                    }

...
